<resources>
    <string name="app_name">Rent a Car</string>
    <string name="gestion_de_vehiculos">Gestión de vehículos</string>
    <string name="gestion_alquileres">Gestión de Alquileres</string>
    <string name="gestion_clientes">Gestión de clientes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="almacenar">Almacenar</string>
    <string name="consultar">Consultar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="asignar_estado">Asignar estado</string>
    <string name="regresar">Regresar</string>

    <string-array name="tipoVehiculo">
        <item>Coche</item>
        <item>Microbus</item>
        <item>Furgonetas de carga</item>
        <item>Camion</item>
    </string-array>

    <string-array name="estadoVehiculo">
        <item>Disponible</item>
        <item>Alquilado</item>
    </string-array>

    <!-- CLIENTES -->
    <string name="registrarCliente">Registrar</string>
    <string name="editarCliente">Editar</string>
    <string name="eliminarCliente">Eliminar</string>
    <string name="consultarCliente">Consultar</string>

</resources>